# rayshaft

./: .gitignore  README.md  biome.json  components.json  package-lock.json  package.json  pnpm-lock.yaml  vite.config.ts
src/: App.tsx  jotai.tsx  main.tsx
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: migrated.json
src-tauri/src/: apps.rs  command.rs  config.rs  hotkeys.rs  installed_apps.rs  main.rs  window.rs
src-tauri/src/scripts/: launch_app.applescript
src/components/: Alias.tsx  Calculator.tsx  Command.tsx  Keyboard.tsx  Settings.tsx
src/components/shadcn/: scroll-area.tsx  separator.tsx
src/functions/: search.ts
src/hooks/: useApps.tsx  useEscape.tsx  useWindowHotkeys.tsx
src/styles/: main.css
src/types/: keyboard.ts
