[package]
name = "tauri-macos-spotlight-app"
version = "0.2.0"
description = "A Tauri macOS spotlight app"
authors = ["Victor Aremu <me@victorare.mu>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "2.0.5", features = [] }

[dependencies]
tauri = { version = "2.0.5", features = ["macos-private-api"] }
tauri-plugin-global-shortcut = "2.2.0"

thiserror = "2.0.11"

tauri-nspanel = { git = "https://github.com/ahkohd/tauri-nspanel", branch = "v2" }
monitor = { git = "https://github.com/ahkohd/tauri-toolkit", branch = "v2" }

plist = "1.7.0"
serde = "1.0.217"

[features]
# by default Tauri runs in production mode
# when `tauri dev` runs it is executed with `cargo run --no-default-features` if `devPath` is an URL
default = ["custom-protocol"]
# this feature is used used for production builds where `devPath` points to the filesystem
# DO NOT remove this
custom-protocol = ["tauri/custom-protocol"]
